finish related work

--- a/literature.bib
+++ b/literature.bib
@@ -29,6 +29,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{fortunato2010community,
+  title={Community detection in graphs},
+  author={Fortunato, Santo},
+  journal={Physics reports},
+  volume={486},
+  number={3},
+  pages={75--174},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article{kahn1962topological,
   title={Topological sorting of large networks},
   author={Kahn, Arthur B},
@@ -69,6 +80,40 @@
   institution={RAND CORP SANTA MONICA CA}
 }
 
+@inproceedings{sleator1981data,
+  title={A data structure for dynamic trees},
+  author={Sleator, Daniel D and Tarjan, Robert Endre},
+  booktitle={Proceedings of the thirteenth annual ACM symposium on Theory of computing},
+  pages={114--122},
+  year={1981},
+  organization={ACM}
+}
+
+@article{alpert1995recent,
+  title={Recent directions in netlist partitioning: a survey},
+  author={Alpert, Charles J and Kahng, Andrew B},
+  journal={Integration, the VLSI journal},
+  volume={19},
+  number={1-2},
+  pages={1--81},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@book{bader2013graph,
+  title={Graph partitioning and graph clustering},
+  author={Bader, David A and Meyerhenke, Henning and Sanders, Peter and Wagner, Dorothea},
+  volume={588},
+  year={2013},
+  publisher={American Mathematical Soc.}
+}
+
+@misc{papa2007hypergraph,
+  title={Hypergraph Partitioning and Clustering.},
+  author={Papa, David A and Markov, Igor L},
+  year={2007}
+}
+
 @article{goldberg1988new,
   title={A new approach to the maximum-flow problem},
   author={Goldberg, Andrew V and Tarjan, Robert E},
@@ -78,6 +123,26 @@
   pages={921--940},
   year={1988},
   publisher={ACM}
+}
+
+@article{cherkassky1994fast,
+  title={A fast algorithm for computing maximum flow in a network},
+  author={Cherkassky, Boris V},
+  journal={Collected Papers},
+  volume={3},
+  pages={90--96},
+  year={1994}
+}
+
+@article{derigs1989implementing,
+  title={Implementing Goldberg's max-flow-algorithm—A computational investigation},
+  author={Derigs, Ulrich and Meier, Wolfgang},
+  journal={Mathematical Methods of Operations Research},
+  volume={33},
+  number={6},
+  pages={383--403},
+  year={1989},
+  publisher={Springer}
 }
 
 @article{cherkassky1997implementing,
@@ -108,6 +173,42 @@
   booktitle={2017 Proceedings of the Ninteenth Workshop on Algorithm Engineering and Experiments (ALENEX)},
   pages={28--42},
   year={2017},
+  organization={SIAM}
+}
+
+@article{karypis1999multilevel,
+  title={Multilevel hypergraph partitioning: applications in VLSI domain},
+  author={Karypis, George and Aggarwal, Rajat and Kumar, Vipin and Shekhar, Shashi},
+  journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+  volume={7},
+  number={1},
+  pages={69--79},
+  year={1999},
+  publisher={IEEE}
+}
+
+@inproceedings{osipov2010n,
+  title={n-Level Graph Partitioning},
+  author={Osipov, Vitaly and Sanders, Peter},
+  booktitle={European Symposium on Algorithms},
+  pages={278--289},
+  year={2010},
+  organization={Springer}
+}
+
+@phdthesis{heuer2015engineering,
+  title={Engineering Initial Partitioning Algorithms for direct k-way Hypergraph Partitioning},
+  author={Heuer, Tobias},
+  year={2015},
+  school={Karlsruher Institut f{\"u}r Technologie (KIT)}
+}
+
+@inproceedings{schlag2016k,
+  title={k-way Hypergraph Partitioning via n-Level Recursive Bisection},
+  author={Schlag, Sebastian and Henne, Vitali and Heuer, Tobias and Meyerhenke, Henning and Sanders, Peter and Schulz, Christian},
+  booktitle={2016 Proceedings of the Eighteenth Workshop on Algorithm Engineering and Experiments (ALENEX)},
+  pages={53--67},
+  year={2016},
   organization={SIAM}
 }
 
