--- a/master_thesis/sections/preliminaries.tex
+++ b/master_thesis/sections/preliminaries.tex
@@ -216,6 +216,7 @@ are illustrated in \autoref{img:hypergraph_transformation}.
 \end{figure}
 
 \subsection{Hypergraph Partitioning}
+\label{sec:hypergraph_partitioning}
 
 \begin{definition}
 A $k$-way partition of a hypergraph $H$ is a partition of its hypernodes into
