--- a/macros.tex
+++ b/macros.tex
@@ -45,6 +45,10 @@
 %Flow Variants
 \newcommand{\FlowVariant}[4]{(#1\text{F},#2\text{C},#3\text{M},#4\text{FM})}
 
+%KaHyPar Variants
+\newcommand{\KaHyPar}[1]{KaHyPar-#1}
+\newcommand{\KaHyParConfig}[2]{KaHyPar-#1$_\text{(#2)}$}
+
 \newcounter{todocount}
 \setcounter{todocount}{1}
 \newcommand{\todo}[1]{{\color{red}\textbf{TODO \the\value{todocount}:}
