describe instances in master thesis and add instance html web page

--- a/literature.bib
+++ b/literature.bib
@@ -167,6 +167,60 @@
   publisher={ACM}
 }
 
+@inproceedings{alpert1998ispd98,
+  title={The ISPD98 circuit benchmark suite},
+  author={Alpert, Charles J},
+  booktitle={Proceedings of the 1998 international symposium on Physical design},
+  pages={80--85},
+  year={1998},
+  organization={ACM}
+}
+
+@article{davis2011university,
+  title={The University of Florida sparse matrix collection},
+  author={Davis, Timothy A and Hu, Yifan},
+  journal={ACM Transactions on Mathematical Software (TOMS)},
+  volume={38},
+  number={1},
+  pages={1},
+  year={2011},
+  publisher={ACM}
+}
+
+@article{belov2014application,
+  title={The application and the hard combinatorial benchmarks in sat competition 2014},
+  author={Belov, Anton and Heule, MJ and Diepold, Daniel and J{\"a}rvisalo, Matti},
+  journal={Proceedings of SAT competition},
+  pages={81--82},
+  year={2014}
+}
+
+@article{catalyurek1999hypergraph,
+  title={Hypergraph-partitioning-based decomposition for parallel sparse-matrix vector multiplication},
+  author={Catalyurek, Umit V and Aykanat, Cevdet},
+  journal={IEEE Transactions on parallel and distributed systems},
+  volume={10},
+  number={7},
+  pages={673--693},
+  year={1999},
+  publisher={IEEE}
+}
+
+@inproceedings{viswanathan2012dac,
+  title={The DAC 2012 routability-driven placement contest and benchmark suite},
+  author={Viswanathan, Natarajan and Alpert, Charles and Sze, Cliff and Li, Zhuo and Wei, Yaoguang},
+  booktitle={Proceedings of the 49th Annual Design Automation Conference},
+  pages={774--782},
+  year={2012},
+  organization={ACM}
+}
+
+@article{mann2014formula,
+  title={Formula partitioning revisited},
+  author={Mann, Zolt{\'a}n {\'A}d{\'a}m and Papp, P{\'a}l Andr{\'a}s},
+  year={2014}
+}
+
 @inproceedings{akhremtsev2017engineering,
   title={Engineering a direct k-way Hypergraph Partitioning Algorithm},
   author={Akhremtsev, Yaroslav and Heuer, Tobias and Sanders, Peter and Schlag, Sebastian},
