--- a/master_thesis/experiments/speed_up_heuristics/heuristic_table.tex
+++ b/master_thesis/experiments/speed_up_heuristics/heuristic_table.tex
@@ -1,5 +1,5 @@
-\KaHyPar{CA} & $5857.52$ & $5643.21$ & $21.17$ \\ 
-\KaHyPar{MF} & $-1.98$ & $-1.65$ & $57.67$ \\ 
-\KaHyParConfig{MF}{R1} & $-1.91$ & $-1.65$ & $50.62$ \\ 
-\KaHyParConfig{MF}{R1,R2} & $-1.91$ & $-1.64$ & $45.94$ \\ 
-\KaHyParConfig{MF}{R1,R2,R3} & $-1.91$ & $-1.61$ & $40.65$ \\ 
+\KaHyPar{CA} & $6928.09$ & $6673.53$ & - & $27.47$ \\ 
+\KaHyPar{MF} & $-2.13$ & $-1.78$ & $49.86$ & $77.33$ \\ 
+\KaHyParConfig{MF}{R1} & $-2.06$ & $-1.74$ & $39.52$ & $66.99$ \\ 
+\KaHyParConfig{MF}{R1,R2} & $-2.05$ & $-1.73$ & $33.67$ & $61.15$ \\ 
+\KaHyParConfig{MF}{R1,R2,R3} & $-2.05$ & $-1.77$ & $26.35$ & $53.82$ \\ 
