--- a/master_thesis/experiments/flow_network/node_edge_distribution.tex
+++ b/master_thesis/experiments/flow_network/node_edge_distribution.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.6.2-92-0ad2792 on 2017-11-02 18:28:28
+% Created by tikzDevice version 0.6.2-92-0ad2792 on 2017-11-07 09:47:09
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
@@ -10,308 +10,339 @@
 \path[fill=fillColor] ( -0.00,  0.00) rectangle (505.89,433.62);
 \end{scope}
 \begin{scope}
-\path[clip] ( 52.03,138.27) rectangle (503.04,433.62);
+\path[clip] ( 52.03,112.66) rectangle (503.04,433.62);
 \definecolor[named]{drawColor}{rgb}{0.75,0.75,0.75}
 
-\path[draw=drawColor,line width= 1.5pt,line join=round,line cap=round] ( 52.03,138.27) rectangle (503.04,433.62);
+\path[draw=drawColor,line width= 1.5pt,line join=round,line cap=round] ( 52.03,112.66) rectangle (503.04,433.62);
 \definecolor[named]{drawColor}{rgb}{0.90,0.90,0.90}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,152.39) --
-	(503.04,152.39);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,128.01) --
+	(503.04,128.01);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,192.81) --
-	(503.04,192.81);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,171.93) --
+	(503.04,171.93);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,273.64) --
-	(503.04,273.64);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,259.77) --
+	(503.04,259.77);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,345.07) --
-	(503.04,345.07);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,337.39) --
+	(503.04,337.39);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,402.22) --
-	(503.04,402.22);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,399.50) --
+	(503.04,399.50);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 92.03,138.27) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 92.03,112.66) --
 	( 92.03,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (139.09,138.27) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] (139.09,112.66) --
 	(139.09,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (233.22,138.27) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] (233.22,112.66) --
 	(233.22,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (316.39,138.27) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] (316.39,112.66) --
 	(316.39,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (382.95,138.27) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] (382.95,112.66) --
 	(382.95,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (440.22,138.27) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] (440.22,112.66) --
 	(440.22,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,233.22) --
-	(503.04,233.22);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,215.85) --
+	(503.04,215.85);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,314.05) --
-	(503.04,314.05);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,303.69) --
+	(503.04,303.69);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,376.08) --
-	(503.04,376.08);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,371.09) --
+	(503.04,371.09);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,428.37) --
-	(503.04,428.37);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,427.91) --
+	(503.04,427.91);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (186.15,138.27) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] (186.15,112.66) --
 	(186.15,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (280.28,138.27) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] (280.28,112.66) --
 	(280.28,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (352.50,138.27) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] (352.50,112.66) --
 	(352.50,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (413.39,138.27) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] (413.39,112.66) --
 	(413.39,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (467.04,138.27) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] (467.04,112.66) --
 	(467.04,433.62);
+\definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
+
+\path[draw=drawColor,draw opacity=0.25,line width= 0.6pt,line join=round] (128.16,151.81) --
+	(139.56,157.43) --
+	(183.06,183.31) --
+	(200.35,191.27);
+
+\path[draw=drawColor,draw opacity=0.25,line width= 0.6pt,line join=round] (145.59,182.68) --
+	(152.97,186.52) --
+	(192.13,205.85) --
+	(202.58,210.78);
+
+\path[draw=drawColor,draw opacity=0.25,line width= 0.6pt,line join=round] ( 85.47,127.25) --
+	( 85.53,127.25) --
+	(124.58,155.95) --
+	(124.70,155.99);
+
+\path[draw=drawColor,draw opacity=0.25,line width= 0.6pt,line join=round] (302.54,330.93) --
+	(302.55,330.94) --
+	(482.39,419.00) --
+	(482.54,419.03);
+
+\path[draw=drawColor,draw opacity=0.25,line width= 0.6pt,line join=round] (223.17,236.86) --
+	(232.30,242.43) --
+	(331.90,299.04) --
+	(343.05,303.68);
+
+\path[draw=drawColor,draw opacity=0.25,line width= 0.6pt,line join=round] (159.74,361.93) --
+	(161.75,363.31) --
+	(164.12,365.00) --
+	(166.48,366.63);
 \definecolor[named]{fillColor}{rgb}{0.78,0.49,1.00}
 
-\path[fill=fillColor] (128.16,174.30) circle ( 11.07);
+\path[fill=fillColor] (128.16,151.81) circle (  7.85);
 
-\path[fill=fillColor] (145.59,219.91) --
-	(160.50,194.10) --
-	(130.69,194.10) --
+\path[fill=fillColor] (145.59,194.89) --
+	(156.17,176.58) --
+	(135.02,176.58) --
 	cycle;
 
-\path[fill=fillColor] ( 74.41,140.63) --
-	( 96.54,140.63) --
-	( 96.54,162.76) --
-	( 74.41,162.76) --
+\path[fill=fillColor] ( 77.62,119.40) --
+	( 93.33,119.40) --
+	( 93.33,135.10) --
+	( 77.62,135.10) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.78,0.49,1.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (286.89,339.13) -- (318.19,339.13);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (291.43,330.93) -- (313.64,330.93);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.54,323.48) -- (302.54,354.78);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.54,319.83) -- (302.54,342.04);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (212.10,241.49) rectangle (234.23,263.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (215.31,229.01) rectangle (231.02,244.71);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (212.10,241.49) -- (234.23,263.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (215.31,229.01) -- (231.02,244.71);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (212.10,263.62) -- (234.23,241.49);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (215.31,244.71) -- (231.02,229.01);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.68,356.58) -- (170.81,378.71);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (151.89,354.07) -- (167.59,369.78);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.68,378.71) -- (170.81,356.58);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (151.89,369.78) -- (167.59,354.07);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (144.09,367.65) -- (175.39,367.65);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.64,361.93) -- (170.85,361.93);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (159.74,352.00) -- (159.74,383.29);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (159.74,350.82) -- (159.74,373.03);
 \definecolor[named]{fillColor}{rgb}{0.00,0.75,0.77}
 
-\path[fill=fillColor] (139.56,179.46) circle ( 11.07);
+\path[fill=fillColor] (139.56,157.43) circle (  7.85);
 
-\path[fill=fillColor] (152.97,223.45) --
-	(167.87,197.63) --
-	(138.06,197.63) --
+\path[fill=fillColor] (152.97,198.73) --
+	(163.54,180.42) --
+	(142.39,180.42) --
 	cycle;
 
-\path[fill=fillColor] (113.52,167.04) --
-	(135.65,167.04) --
-	(135.65,189.17) --
-	(113.52,189.17) --
+\path[fill=fillColor] (116.73,148.10) --
+	(132.44,148.10) --
+	(132.44,163.80) --
+	(116.73,163.80) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.00,0.75,0.77}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (286.90,339.13) -- (318.20,339.13);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (291.44,330.94) -- (313.65,330.94);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.55,323.49) -- (302.55,354.78);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.55,319.84) -- (302.55,342.05);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (221.23,246.62) rectangle (243.37,268.75);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (224.45,234.58) rectangle (240.15,250.29);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (221.23,246.62) -- (243.37,268.75);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (224.45,234.58) -- (240.15,250.29);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (221.23,268.75) -- (243.37,246.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (224.45,250.29) -- (240.15,234.58);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.68,357.85) -- (172.81,379.98);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.90,355.45) -- (169.60,371.16);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.68,379.98) -- (172.81,357.85);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.90,371.16) -- (169.60,355.45);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (146.10,368.92) -- (177.40,368.92);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.64,363.31) -- (172.85,363.31);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (161.75,353.27) -- (161.75,384.57);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (161.75,352.20) -- (161.75,374.41);
 \definecolor[named]{fillColor}{rgb}{0.49,0.68,0.00}
 
-\path[fill=fillColor] (183.06,203.29) circle ( 11.07);
+\path[fill=fillColor] (183.06,183.31) circle (  7.85);
 
-\path[fill=fillColor] (192.13,241.23) --
-	(207.03,215.41) --
-	(177.23,215.41) --
+\path[fill=fillColor] (192.13,218.06) --
+	(202.71,199.74) --
+	(181.55,199.74) --
 	cycle;
 
-\path[fill=fillColor] ( 74.47,140.63) --
-	( 96.60,140.63) --
-	( 96.60,162.76) --
-	( 74.47,162.76) --
+\path[fill=fillColor] ( 77.68,119.40) --
+	( 93.38,119.40) --
+	( 93.38,135.11) --
+	( 77.68,135.11) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.49,0.68,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.74,420.16) -- (498.04,420.16);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (471.29,419.00) -- (493.50,419.00);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.39,404.52) -- (482.39,433.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.39,407.89) -- (482.39,430.10);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (320.84,298.71) rectangle (342.97,320.85);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (324.05,291.19) rectangle (339.75,306.89);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (320.84,298.71) -- (342.97,320.85);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (324.05,291.19) -- (339.75,306.89);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (320.84,320.85) -- (342.97,298.71);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (324.05,306.89) -- (339.75,291.19);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.06,359.41) -- (175.19,381.54);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (156.27,357.15) -- (171.97,372.85);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.06,381.54) -- (175.19,359.41);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (156.27,372.85) -- (171.97,357.15);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.47,370.47) -- (179.77,370.47);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.02,365.00) -- (175.23,365.00);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (164.12,354.83) -- (164.12,386.12);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (164.12,353.89) -- (164.12,376.11);
 \definecolor[named]{fillColor}{rgb}{0.97,0.46,0.43}
 
-\path[fill=fillColor] (200.35,210.60) circle ( 11.07);
+\path[fill=fillColor] (200.35,191.27) circle (  7.85);
 
-\path[fill=fillColor] (202.58,245.77) --
-	(217.48,219.96) --
-	(187.68,219.96) --
+\path[fill=fillColor] (202.58,223.00) --
+	(213.15,204.68) --
+	(192.00,204.68) --
 	cycle;
 
-\path[fill=fillColor] (113.64,167.07) --
-	(135.77,167.07) --
-	(135.77,189.20) --
-	(113.64,189.20) --
+\path[fill=fillColor] (116.85,148.14) --
+	(132.56,148.14) --
+	(132.56,163.84) --
+	(116.85,163.84) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.97,0.46,0.43}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.90,420.19) -- (498.19,420.19);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (471.44,419.03) -- (493.65,419.03);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.54,404.55) -- (482.54,433.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.54,407.93) -- (482.54,430.14);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (331.98,302.98) rectangle (354.11,325.11);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (335.19,295.83) rectangle (350.90,311.53);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (331.98,302.98) -- (354.11,325.11);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (335.19,295.83) -- (350.90,311.53);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (331.98,325.11) -- (354.11,302.98);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (335.19,311.53) -- (350.90,295.83);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.41,360.91) -- (177.54,383.04);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (158.62,358.78) -- (174.33,374.48);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.41,383.04) -- (177.54,360.91);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (158.62,374.48) -- (174.33,358.78);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.83,371.97) -- (182.13,371.97);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.37,366.63) -- (177.58,366.63);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (166.48,356.32) -- (166.48,387.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (166.48,355.52) -- (166.48,377.73);
 \definecolor[named]{drawColor}{rgb}{1.00,0.00,0.00}
 \definecolor[named]{fillColor}{rgb}{1.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round,fill=fillColor] ( 72.53,138.27) -- ( 72.53,433.62);
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round,fill=fillColor] ( 72.53,112.66) -- ( 72.53,433.62);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,230.19) {300000};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,212.82) {300000};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,311.02) {600000};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,300.66) {600000};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,373.05) {900000};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,368.06) {900000};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,425.34) {1200000};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,424.88) {1200000};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,233.22) --
-	( 52.03,233.22);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,215.85) --
+	( 52.03,215.85);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,314.05) --
-	( 52.03,314.05);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,303.69) --
+	( 52.03,303.69);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,376.08) --
-	( 52.03,376.08);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,371.09) --
+	( 52.03,371.09);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,428.37) --
-	( 52.03,428.37);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,427.91) --
+	( 52.03,427.91);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (186.15,136.84) --
-	(186.15,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (186.15,111.24) --
+	(186.15,112.66);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (280.28,136.84) --
-	(280.28,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (280.28,111.24) --
+	(280.28,112.66);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (352.50,136.84) --
-	(352.50,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (352.50,111.24) --
+	(352.50,112.66);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (413.39,136.84) --
-	(413.39,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (413.39,111.24) --
+	(413.39,112.66);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (467.04,136.84) --
-	(467.04,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (467.04,111.24) --
+	(467.04,112.66);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (186.15,127.78) {1e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (186.15,102.18) {1e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (280.28,127.78) {2e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (280.28,102.18) {2e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (352.50,127.78) {3e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (352.50,102.18) {3e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (413.39,127.78) {4e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (413.39,102.18) {4e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (467.04,127.78) {5e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (467.04,102.18) {5e+05};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (277.54,110.97) {Number of Nodes};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (277.54, 85.36) {Number of Nodes};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (  6.82,285.94) {Number of Edges};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (  6.82,273.14) {Number of Edges};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (188.71, 78.25) rectangle (217.16,106.70);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (201.51, 61.17) rectangle (221.43, 81.09);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
 
-\path[fill=fillColor] (202.93, 92.47) circle ( 11.07);
+\path[fill=fillColor] (211.47, 71.13) circle (  7.85);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (188.71, 49.79) rectangle (217.16, 78.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (201.51, 41.26) rectangle (221.43, 61.17);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
 
-\path[fill=fillColor] (202.93, 81.23) --
-	(217.84, 55.41) --
-	(188.03, 55.41) --
+\path[fill=fillColor] (211.47, 63.43) --
+	(222.05, 45.11) --
+	(200.90, 45.11) --
 	cycle;
 \end{scope}
 \begin{scope}
@@ -319,16 +350,16 @@
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (246.76, 78.25) rectangle (275.22,106.70);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (251.03, 61.17) rectangle (270.95, 81.09);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
 
-\path[fill=fillColor] (249.93, 81.41) --
-	(272.06, 81.41) --
-	(272.06,103.54) --
-	(249.93,103.54) --
+\path[fill=fillColor] (253.14, 63.28) --
+	(268.84, 63.28) --
+	(268.84, 78.98) --
+	(253.14, 78.98) --
 	cycle;
 \end{scope}
 \begin{scope}
@@ -336,166 +367,166 @@
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (246.76, 49.79) rectangle (275.22, 78.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (251.03, 41.26) rectangle (270.95, 61.17);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (245.34, 64.02) -- (276.64, 64.02);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (249.89, 51.21) -- (272.10, 51.21);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (260.99, 48.37) -- (260.99, 79.67);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (260.99, 40.11) -- (260.99, 62.32);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (307.86, 78.25) rectangle (336.31,106.70);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (303.59, 61.17) rectangle (323.51, 81.09);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 81.41) rectangle (333.15,103.54);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (305.70, 63.28) rectangle (321.40, 78.98);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 81.41) -- (333.15,103.54);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (305.70, 63.28) -- (321.40, 78.98);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02,103.54) -- (333.15, 81.41);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (305.70, 78.98) -- (321.40, 63.28);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (307.86, 49.79) rectangle (336.31, 78.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (303.59, 41.26) rectangle (323.51, 61.17);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 52.95) -- (333.15, 75.08);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (305.70, 43.36) -- (321.40, 59.07);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 75.08) -- (333.15, 52.95);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (305.70, 59.07) -- (321.40, 43.36);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (306.44, 64.02) -- (337.73, 64.02);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.44, 51.21) -- (324.66, 51.21);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (322.09, 48.37) -- (322.09, 79.67);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (313.55, 40.11) -- (313.55, 62.32);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (218.97, 89.63) {\DAC};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (223.24, 68.29) {\DAC};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (218.97, 61.18) {\ISPD};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (223.24, 48.37) {\ISPD};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (277.02, 89.63) {\Dual};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (272.76, 68.29) {\Dual};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (277.02, 61.18) {\Primal};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (272.76, 48.37) {\Primal};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (338.12, 89.63) {\Literal};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (325.32, 68.29) {\Literal};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (338.12, 61.18) {\SPM};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (325.32, 48.37) {\SPM};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (187.86, 12.80) rectangle (216.32, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (204.94, 12.80) rectangle (224.85, 32.72);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.97,0.46,0.43}
 \definecolor[named]{fillColor}{rgb}{0.97,0.46,0.43}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (202.09, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (214.89, 22.76) circle (  7.85);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (229.69, 12.80) rectangle (258.14, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (238.23, 12.80) rectangle (258.14, 32.72);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.49,0.68,0.00}
 \definecolor[named]{fillColor}{rgb}{0.49,0.68,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (243.92, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (248.18, 22.76) circle (  7.85);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (272.83, 12.80) rectangle (301.29, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (272.83, 12.80) rectangle (292.75, 32.72);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.75,0.77}
 \definecolor[named]{fillColor}{rgb}{0.00,0.75,0.77}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (287.06, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (282.79, 22.76) circle (  7.85);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (315.27, 12.80) rectangle (343.72, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (306.73, 12.80) rectangle (326.65, 32.72);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.78,0.49,1.00}
 \definecolor[named]{fillColor}{rgb}{0.78,0.49,1.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (329.50, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (316.69, 22.76) circle (  7.85);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (218.12, 24.19) {$\ExpLawler$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (226.66, 19.92) {$\ExpLawler$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (259.95, 24.19) {$\ExpNodeDegree$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (259.95, 19.92) {$\ExpNodeDegree$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (303.09, 24.19) {$\ExpEdgeSize$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (294.56, 19.92) {$\ExpEdgeSize$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (345.53, 24.19) {$\ExpHybrid$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (328.46, 19.92) {$\ExpHybrid$};
 \end{scope}
 \end{tikzpicture}
